Update target Java version to 21
Also `getFirst()` and `getLast()`

PiperOrigin-RevId: 831378131