@@ -205,7 +205,7 @@ public class TurbineTypes implements Types {
     if (bounds.isEmpty()) {
       return true;
     }
-    Type bound = bounds.get(0);
+    Type bound = bounds.getFirst();
     return switch (bound.tyKind()) {
       case TY_VAR -> false;
       case CLASS_TY ->
@@ -441,7 +441,7 @@ public class TurbineTypes implements Types {
       }
       // perform repeated type substitution to get an instance of B with the type arguments
       // provided by A
-      a = path.get(0);
+      a = path.getFirst();
       for (ClassTy ty : path) {
         ImmutableMap<TyVarSymbol, Type> mapping = getMapping(ty);
         if (mapping == null) {
