@@ -138,10 +138,13 @@ public class TurbineElementTest {
             factory.typeElement(new ClassSymbol("java/util/List")))
         .addEqualityGroup(factory.typeElement(new ClassSymbol("java/util/ArrayList")))
         .addEqualityGroup(
-            factory.typeElement(new ClassSymbol("java/util/Map")).getTypeParameters().get(0),
-            factory.typeElement(new ClassSymbol("java/util/Map")).getTypeParameters().get(0))
+            factory.typeElement(new ClassSymbol("java/util/Map")).getTypeParameters().getFirst(),
+            factory.typeElement(new ClassSymbol("java/util/Map")).getTypeParameters().getFirst())
         .addEqualityGroup(
-            factory.typeElement(new ClassSymbol("java/util/ArrayList")).getTypeParameters().get(0))
+            factory
+                .typeElement(new ClassSymbol("java/util/ArrayList"))
+                .getTypeParameters()
+                .getFirst())
         .addEqualityGroup(
             factory.fieldElement(
                 new FieldSymbol(new ClassSymbol("java/util/ArrayList"), "elementData")),
@@ -164,7 +167,7 @@ public class TurbineElementTest {
                         .findFirst()
                         .get())
                 .getParameters()
-                .get(0))
+                .getFirst())
         .addEqualityGroup(
             factory
                 .typeElement(new ClassSymbol("java/util/ArrayList"))
